Add dependabot for NodeJS autoinstrumentation

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -49,3 +49,21 @@ updates:
     directory: /cmd/operator-opamp-bridge
     schedule:
       interval: weekly
+
+  - package-ecosystem: npm
+    directory: /autoinstrumentation/nodejs
+    versioning-strategy: increase
+    schedule:
+      interval: "weekly"
+    commit-message:
+      prefix: "Bump NodeJS autoinstrumentation deps"
+    groups:
+      js-patch:
+        update-types:
+        - "patch"
+      js-minor:
+        update-types:
+        - "minor"
+      js-major:
+        update-types:
+        - "major"
